[package]
name = "ip-to-country"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-std = "1.12.0"
dotenv = "0.15.0"
envconfig = "0.10.0"
lazy_static = "1.4.0"
maxminddb = "0.24.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
